Change approach to z-index to improve tab stops

--- a/src/styles/inherited-scss/components/_layers.scss
+++ b/src/styles/inherited-scss/components/_layers.scss
@@ -3,6 +3,7 @@
   position: absolute;
   right: 20px;
   top: 40%;
+  z-index: 110;
 }
 
 .layers-filter {
